# panoptes

./: .dockerignore  .env.example  .gitignore  .yamllint  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/actions/setup-panoptes/: action.yml
.github/workflows/: ci-checks.yml  ci.yml  publish.yml
charts/panoptes/: Chart.yaml  values.schema.json  values.yaml
charts/panoptes/ci/: test-values.yaml
charts/panoptes/templates/: _helpers.tpl  clusterissuer.yaml  collector-deployment.yaml  config-configmap.yaml  grafana-deployment.yaml  ingress.yaml  kubernetes-rbac.yaml  mcp-deployment.yaml  oauth2-proxy-deployment.yaml  serviceaccount.yaml  serviceaccounts.yaml  services.yaml  victoriametrics-statefulset.yaml
core/: __init__.py  alerts.py  bootstrap.py  collector.py  config.py  errors.py  model.py  registry.py  rest.py  validation.py
core/dashboards/: grafana.py
core/dashboards/cost/: dashboard.json
core/dashboards/datastore/: dashboard.json
core/dashboards/errors-sentry/: dashboard.json
core/dashboards/karpenter/: dashboard.json
core/dashboards/kubernetes/: dashboard.json
core/dashboards/logs/: dashboard.json
core/dashboards/overview/: dashboard.json
core/dashboards/provisioning/: dashboards.yaml  datasource.yaml
core/dashboards/slo/: dashboard.json
core/mcp/: _metric_helpers.py  context.py  http.py  server.py  tools_discovery.py  tools_query.py
core/notifiers/: logging_notifier.py  slack.py  sns.py
core/planes/: dashboard.py  notifier.py  source.py  store.py
core/sources/: _config.py  cloudwatch.py  http_health.py  kubernetes.py  loki.py  probe.py  prometheus.py  sentry.py
core/stores/: passthrough.py  victoriametrics.py
deploy/terraform/example/: main.tf  terraform.tfvars.example  variables.tf
docs/: ADAPTERS.md  ARCHITECTURE.md  DASHBOARDS.md  DEPLOYMENT.md  IAM.md  ROADMAP.md
docs/adr/: 0001-composition-over-inheritance-for-plug-planes.md  0002-cost-stays-in-the-cloudwatch-source.md  0003-no-get-type-hints-in-core-mcp.md  0004-shared-mcp-metric-helpers-module.md
docs/specs/: NEXT_SESSION_TESTING_PROMPT.md  RESUME_PROMPT.md  v0.1_RESUME_PROMPT.md  v0.1_core_local_proof.md  v0.1_implementation_plan.md  v0.2_RESUME_PROMPT.md  v0.2_hosted_single_pane.md  v0.2_implementation_plan.md  v0.3_depth_genericity.md  v0.3_implementation_plan.md
examples/consumer-fleet-pack/: .gitkeep  pack.py  panoptes.yaml
examples/consumer-fleet-pack/dashboards/fleet/: dashboard.json
examples/consumer-pipeline-pack/: .gitkeep  pack.py  panoptes.yaml
examples/consumer-pipeline-pack/dashboards/pipeline/: dashboard.json
examples/demo-pack/: .env.example  README.md  pack.py  panoptes.hosted.yaml  panoptes.yaml
examples/demo-pack/dashboards/demo/: dashboard.json
modules/stack/: README.md  ebs_csi.tf  eks.tf  ingress.tf  irsa.tf  nodegroup.tf  outputs.tf  variables.tf  versions.tf  vpc.tf
scripts/: precommit.sh  stack.sh
tests/: conftest.py
tests/helm/: test_chart_render.py
tests/integration/: conftest.py  test_collector_to_vm.py  test_grafana_provisioning.py  test_mcp_http_e2e.py  test_mcp_stdio_e2e.py  test_two_consumer_injection.py  trace_probe_pack.py
tests/terraform/: test_module_plan.py  test_module_validate.py
tests/unit/: test_alerts.py  test_bootstrap.py  test_brand_absence.py  test_collector.py  test_collector_assume_role_denial.py  test_config.py  test_consumer_fleet_pack.py  test_consumer_pack_resolver.py  test_core_purity_guard.py  test_dashboards_git_injection.py  test_dashboards_valid.py  test_demo_pack.py  test_fan_out.py  test_genericity_two_consumers.py  test_imports.py  test_make_invoker.py  test_mcp_cost.py  test_mcp_discovery.py  test_mcp_healthz.py  test_mcp_http_transport.py  test_mcp_query.py  test_mcp_server_wrappers.py  test_mcp_slo_compare.py  test_metric_helpers.py  test_model.py  test_no_write_actions_guard.py  test_notifier_logging.py  test_notifier_slack.py  test_notifier_sns.py  test_probe_health.py  test_query_context.py  test_query_context_readers.py  test_registry.py  test_rest.py  test_source_capabilities.py  test_source_cloudwatch.py  test_source_cloudwatch_cost.py  test_source_http_health.py  test_source_kubernetes.py  test_source_loki.py  (+5 more)
