[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "panoptes"
version = "0.1.0"
description = "A standalone, pluggable normalizing meta-layer over your monitoring tools."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "fastmcp>=0.2",
    "kubernetes>=29",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "testcontainers>=4.0",
    "boto3-stubs[cloudwatch,logs,sts]>=1.34",
    "types-PyYAML>=6.0",
    "yamllint>=1.35",
]

[tool.setuptools.packages.find]
include = ["core*", "examples*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["core", "examples", "tests"]

[tool.ruff.lint]
# C90 = mccabe cyclomatic-complexity gate (mirrors FIDA's radon). The threshold is
# set to the current codebase ceiling so the gate passes today with no refactor, then
# red-bars any NEW function that climbs past it.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "C90"]

[tool.ruff.lint.mccabe]
# 25 = the most-complex function today (`core/mcp/server.py::_core_registrars`, a flat
# registrar table of per-tool registrar closures — structurally a dispatch map, not
# tangled control flow, so it is left as-is per "set a sane passing threshold, don't
# refactor to fit"). v0.2 added the `get_cluster_state` registrar (a sibling closure in
# the same map), nudging the count from 22 to 25; the table is still a flat dispatch, so
# the threshold tracks it rather than forcing a cosmetic split. Everything else sits at
# <=12, so this leaves wide headroom for ordinary functions while still catching
# genuinely runaway complexity.
max-complexity = 25

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_explicit = true        # enforces the no-Any discipline
disallow_any_generics = true
files = ["core", "examples", "tests"]

[[tool.mypy.overrides]]
# `kubernetes` ships no py.typed (Risk K5), so its import is untyped; the source wraps
# the client surface behind a small local Protocol so `disallow_any_explicit` stays
# satisfied (the `_FastMcpAdapter` pattern). Only deps without type stubs go here.
module = ["fastmcp.*", "testcontainers.*", "respx.*", "kubernetes.*"]
ignore_missing_imports = true       # only for deps that ship no type stubs

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires docker-compose / testcontainers (opt-in, slow)",
    "terraform: requires the terraform binary; runs the hermetic IaC validate gate (opt-in)",
    "helm: requires the helm + kubeconform binaries; runs the hermetic chart render gate (opt-in)",
]
testpaths = ["tests"]

[tool.coverage.run]
# Match the authoritative CI gate, which measures `core` only (examples/ is the
# demo-pack fixture and carries no coverage floor — see the Coverage mandate). If
# this listed examples/ too, a bare local `pytest --cov` would report a DIFFERENT
# number than CI's `--cov=core` run, inviting "green locally, red in CI" surprises.
# Measure examples/ coverage only when explicitly requested (`--cov=examples`).
source = ["core"]
branch = true
