[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "panoptes"
version = "0.1.0"
description = "A standalone, pluggable normalizing meta-layer over your monitoring tools."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "fastmcp>=0.2",
    "kubernetes>=29",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "testcontainers>=4.0",
    "boto3-stubs[cloudwatch,logs,sts,sns]>=1.34",
    "types-PyYAML>=6.0",
    "yamllint>=1.35",
    # Hermetic static `.tf` parsing for the Terraform plan-assertion test (Risk K3 — assert
    # on the rendered config, never a live `apply`/creds). `python-hcl2` parses the module's
    # HCL into plain dicts so the IRSA-scoping / resource-scoped-publish / no-wildcard-write
    # invariants are asserted offline with no AWS access.
    "python-hcl2>=4.3",
]

[tool.setuptools.packages.find]
include = ["core*", "examples*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["core", "examples", "tests"]

[tool.ruff.lint]
# C90 = mccabe cyclomatic-complexity gate (mirrors FIDA's radon). The threshold is
# set to the current codebase ceiling so the gate passes today with no refactor, then
# red-bars any NEW function that climbs past it.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "C90"]

[tool.ruff.lint.mccabe]
# 31 = the most-complex function today (`core/mcp/server.py::_core_registrars`, a flat
# registrar table of per-tool registrar closures — structurally a dispatch map, not
# tangled control flow, so it is left as-is per "set a sane passing threshold, don't
# refactor to fit"). v0.2 grew the table one closure at a time: get_cluster_state
# (Phase 1) took it 22→25, then get_slo + compare_envs (Phase 4) took it 25→31. The table
# is still a flat dispatch (each closure is independent), so the threshold tracks it rather
# than forcing a cosmetic split. Everything else sits at <=12, so this leaves wide headroom
# for ordinary functions while still catching genuinely runaway complexity.
max-complexity = 31

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_explicit = true        # enforces the no-Any discipline
disallow_any_generics = true
files = ["core", "examples", "tests"]

[[tool.mypy.overrides]]
# `kubernetes` ships no py.typed (Risk K5), so its import is untyped; the source wraps
# the client surface behind a small local Protocol so `disallow_any_explicit` stays
# satisfied (the `_FastMcpAdapter` pattern). Only deps without type stubs go here.
module = ["fastmcp.*", "testcontainers.*", "respx.*", "kubernetes.*", "hcl2.*"]
ignore_missing_imports = true       # only for deps that ship no type stubs

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires docker-compose / testcontainers (opt-in, slow)",
    "terraform: the hermetic IaC gate (opt-in). Two kinds of marked test: hcl2-only static-parse plan-assertion tests (need NO terraform binary — they parse modules/stack/*.tf with python-hcl2) AND terraform-binary validate/fmt tests (need the terraform binary). The CI terraform job installs the binary and runs the full marked set.",
    "helm: requires the helm + kubeconform binaries; runs the hermetic chart render gate (opt-in)",
]
testpaths = ["tests"]

[tool.coverage.run]
# Match the authoritative CI gate, which measures `core` only (examples/ is the
# demo-pack fixture and carries no coverage floor — see the Coverage mandate). If
# this listed examples/ too, a bare local `pytest --cov` would report a DIFFERENT
# number than CI's `--cov=core` run, inviting "green locally, red in CI" surprises.
# Measure examples/ coverage only when explicitly requested (`--cov=examples`).
source = ["core"]
branch = true
